--- a/search.html
+++ b/search.html
@@ -4,19 +4,51 @@ page_title: Search
 permalink: /search/
 ---
 
-<div class="container">
-<div class="row">
- <div class="col-12">
-   <div id="search-bar">
-     <i class="fa fa-search" aria-hidden="true"></i>
-     <input id="search-input" type="text" placeholder="Search..." />
-   </div>
-   <ul id="results-container"></ul>
- </div>
-</div>
-</div>
 
-<!-- Script pointing to jekyll-search.js -->
+
+<!DOCTYPE html>
+<html lang="en-us">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <h3 class="masthead-title">
+            <a href="{{ site.url }}/" title="Home">{{ site.title }}</a>
+            <small>{{ site.tagline }}</small>
+  
+          </h3>
+        </div>
+
+      </div>
+ 
+<div class="container">
+  <div class="row">
+   <div class="col-12">
+     <div id="search-bar">
+       <i class="fa fa-search" aria-hidden="true"></i>
+       <input id="search-input" type="text" placeholder="Search..." />
+     </div>
+     <ul id="results-container"></ul>
+   </div>
+  </div>
+  </div>
+   
+    </div>
+
+
+
+
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+    <!-- Script pointing to jekyll-search.js -->
 <script src="/js/simple-jekyll-search.js" type="text/javascript"></script>
 
 <script type="text/javascript">
@@ -31,3 +63,26 @@ SimpleJekyllSearch({
      exclude: ['Welcome']
 });
 </script>
+
+
+
+
+    <script>
+      (function(document) {
+        var toggle = document.querySelector('.sidebar-toggle');
+        var sidebar = document.querySelector('#sidebar');
+        var checkbox = document.querySelector('#sidebar-checkbox');
+
+        document.addEventListener('click', function(e) {
+          var target = e.target;
+
+          if(!checkbox.checked ||
+             sidebar.contains(target) ||
+             (target === checkbox || target === toggle)) return;
+
+          checkbox.checked = false;
+        }, false);
+      })(document);
+    </script>
+  </body>
+</html>
