--- a/search.html
+++ b/search.html
@@ -33,8 +33,8 @@ permalink: /search/
   <div class="row">
    <div class="col-12">
      <div id="search-bar">
-       <i class="fa fa-search" aria-hidden="true"></i>
-       <input id="search-input" type="text" placeholder="Search..." />
+       <i class="fa fa-search" aria-hidden="true" ></i>
+       <input id="search-input" type="text" style="border:none"  placeholder="Search..." />
      </div>
      <ul id="results-container"></ul>
    </div>
@@ -48,6 +48,10 @@ permalink: /search/
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
+
+
+
+    
     <!-- Script pointing to jekyll-search.js -->
 <script src="/js/simple-jekyll-search.js" type="text/javascript"></script>
 
